# DeepPhonemizer

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_prediction.py  run_training.py
datasets_utts_phones/: combined_dataset.txt
deep_phonemizer/: __init__.py  phonemizer.py  preprocess.py  result.py  train.py
deep_phonemizer/model/: model.py  predictor.py  utils.py
deep_phonemizer/notebooks/: Inference_Example.ipynb  Training_Example.ipynb
deep_phonemizer/training/: dataset.py  evaluation.py  losses.py  trainer.py
deep_phonemizer/utils/: io.py  logging.py
dp/: __init__.py  phonemizer.py  preprocess.py  train.py
dp/configs/: forward_config_str.yaml  forward_config_str_phones.yaml
dp/model/: model.py  predictor.py
dp/preprocessing/: text.py  utils.py
dp/training/: dataset.py  decorators.py  evaluation.py  metrics.py  trainer.py
mkdocs/: autogen.py
tests/: test_autoreg_training.py  test_dataset.py  test_decorators.py  test_evaluation.py  test_forward_training.py  test_language_tokenizer.py  test_metrics.py  test_phonemizer.py  test_predictor.py  test_preprocess.py  test_preprocessor.py  test_sequence_tokenizer.py
