[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nrc-deep-phonemizer"
version = "0.0.20"
description = "Grapheme to phoneme conversion with deep learning."
readme = "README.rst"
license = { text = "MIT" }
authors = [
    { name = "Christian Schäfer", email = "c.schaefer.home@gmail.com" },
    { name = "Aidan Pine", email = "hello@aidanpine.ca" },
]
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=1.2.0",
    "tqdm>=4.38.0",
    "PyYAML>=5.1",
    "tensorboard",
    "certifi>=2022.12.7",
    "wheel>=0.38.0",
    "nltk>=3.9.1",
    "setuptools>=65.5.1",
]

[project.optional-dependencies]
tests = ["pytest-cov"]
docs = ["mkdocs", "mkdocs-material"]
dev = ["bumpversion"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]

[tool.setuptools]
include-package-data = true
